<resources>
    <string name="app_name">Glare</string>
    <string name="ok" >ok</string>
    <string name="title_location_permission">Location Permission</string>
    <string name="text_location_permission">"Do you want to access the location"</string>
    <string name="select_city">Select city</string>
    <string name="MAPBOX_ACCESS_TOKEN">pk.eyJ1IjoidGFzZmlhc2V1dGkiLCJhIjoiY2tubzd1b3U5MTVjMzJvbW9ybm5laGU4bSJ9.3XIBkPnAK9juMzlx-Rar9A</string>
    <string name="mapbox_access_token" />
    <string name="action_settings">Upcoming Weather Forecast</string>
    <string name="action_search">Search</string>
    <string name="hello_world">Hello world!</string>
    <string name="newLine">\n</string>
    <string name="textview">TextView</string>
    <string name="pressure">Pressure</string>
    <string name="sunset">Sunset</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="latitude">:Latitude</string>
    <string name="longitude">:Longitude</string>
    <string name="humidity">:Humidity</string>
    <string name="sunrise">:Sunrise</string>
    <string name="Sunset">:Sunset</string>
    <string name="Pressure">:Pressure</string>
    <string name="Wind_speed">:Wind Speed</string>
    <string name="Latitude">Latitude</string>
    <string name="Longitude">Longitude</string>
    <string name="Humidity">Humidity</string>
    <string name="Sunrise">Sunrise</string>
    <string name="date_time">Date/Time</string>
    <string name="c">°C</string>
    <string name="city">City</string>
    <string name="country">Country</string>
</resources>